src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}


table tr td {
  border-right: 1px solid blue;
  color: black;
  width: 5%;
  padding: 20px;
  text-align: center;
}

table tr td:first-of-type {
  border:none
}

table tr td:last-of-type {
  border: none;
}

.row {
  min-width: 1000px;
  white-space: nowrap;
  overflow:visible;
}

.column {
  float: left;
  width: 12.5%;
  text-align: center;
  white-space: nowrap;
  /* min-width: 100px; */
}

svg {
  display:inline;
  position:relative; right:0px; top:0px;
}

.side-column {
  float: left;
  text-align: center;
  white-space: nowrap;
  overflow:visible;
}

.side-column p {
  padding:30px;
  position: sticky;
  overflow:visible;
}

/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
  overflow:visible;
}

